--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
 
